--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 :root {
   --background: #eeeeee;
   --foreground: #171717;
-  --accent: #9d174d;
+  --accent: #a3e635;
   --text: #ffffff;
 }
 
@@ -46,5 +46,5 @@ body {
 }
 
 .results span {
-  color: greenyellow;
+  color: var(--accent);
 }
