--- a/styles/globals.css
+++ b/styles/globals.css
@@ -93,6 +93,22 @@ audio {
   user-select: none;
 }
 
+.heading-fantasy {
+  font-family: var(--font-firlest);
+  font-size: 2.5rem;
+  line-height: 1;
+  text-decoration: none;
+  user-select: none;
+  font-weight: 900;
+  background: url("../public/files/cosmos.gif");
+  background-clip: text;
+  color: rgba(0, 0, 0, 0.2);
+  transition: color 0.5s;
+}
+.heading-fantasy:hover {
+  color: rgba(0, 0, 0, 0);
+}
+
 .shine::after {
   content: "";
   position: absolute;
