--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -90,7 +90,7 @@ audio {
   text-decoration: none;
   user-select: none;
   font-weight: 900;
-  background: url("../public/files/cosmos.gif");
+  background: url("../../public/files/cosmos.gif");
   background-clip: text;
   color: rgba(0, 0, 0, 0.2);
   transition: color 0.5s;
