feat: add wood-hub to mini-websites list

--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -32,6 +32,10 @@
   }
 }
 
+.box {
+  @apply flex w-full flex-col rounded-xl border p-4 text-start;
+}
+
 ::selection {
   background: var(--color-accent-500);
   color: var(--color-neutral-100);
@@ -65,60 +69,6 @@ body {
   to {
     rotate: 1turn;
   }
-}
-
-audio {
-  border-radius: 1rem;
-}
-
-.heading-varporwave {
-  position: relative;
-  overflow: hidden;
-  font-family: var(--font-whiskey);
-  font-size: 2rem;
-  line-height: 1;
-  color: hotpink;
-  text-decoration: none;
-  cursor: default;
-  user-select: none;
-}
-
-.heading-fantasy {
-  font-family: var(--font-firlest);
-  font-size: 2.5rem;
-  line-height: 1;
-  text-decoration: none;
-  user-select: none;
-  font-weight: 900;
-  background: url("../../public/files/cosmos.gif");
-  background-clip: text;
-  color: rgba(0, 0, 0, 0.2);
-  transition: color 0.5s;
-}
-.heading-fantasy:hover {
-  color: rgba(0, 0, 0, 0);
-}
-
-.shine::after {
-  content: "";
-  position: absolute;
-  left: auto;
-  top: 0;
-  bottom: 0;
-  right: -20%;
-  width: 20%;
-  height: 100%;
-  background-image: linear-gradient(
-    135deg,
-    transparent,
-    var(--color-neutral-100),
-    transparent
-  );
-}
-
-.shine:hover::after {
-  transition: all 0.5s ease-out;
-  right: 100%;
 }
 
 .heartbeat {
