feat: amasia calendar converter

--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -11,8 +11,8 @@
   --color-accent-900: hsl(var(--accent, 0), 100%, 39%);
 
   --toastify-toast-width: 360px;
-  --toastify-font-family: "Geist Mono", "Geist Mono Fallback", Helvetica,
-    sans-serif;
+  --toastify-font-family:
+    "Geist Mono", "Geist Mono Fallback", Helvetica, sans-serif;
   --toastify-text-color-light: var(--color-primary-900);
   --toastify-color-progress-light: var(--color-accent-500);
 }
@@ -66,6 +66,10 @@ body {
 .spin:hover {
   cursor: pointer;
   animation-play-state: running;
+}
+
+.spin-fast {
+  animation: rotate 1s linear infinite;
 }
 
 @keyframes rotate {
